# exercises

./: Cargo.toml  Makefile
src/: count_sort.rs  diag.rs  lib.rs  lonely.rs  minmax.rs  operation.rs  ratio.rs  time.rs  zig_zag.rs
