[package]
name = "hackerrank"
version = "0.1.0"
authors = ["Patrick Collins <pat@burned.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conv = "0.3.3"
num-rational = "0.4.1"
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"

[dev-dependencies]
cargo-watch = "8.4.1"
