[package]
name = "exercises"
version = "0.1.0"
authors = ["Patrick Collins <pat@burned.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conv = "0.3.3"
num-rational = "0.4.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[dev-dependencies]
cargo-watch = "8.4.1"

[profile.dev.package."*"]
debug = false
opt-level = 3

[profile.release]
opt-level = 3
